minikube-voyager-kong-ipfs/ipfs-simple-ingress.yaml
apiVersion: voyager.appscode.com/v1beta1
kind: Ingress
metadata:
  name: ipfs-simple-ingress
spec:
  backend:
    serviceName: travis-minikube-ipfs-ipfs
    servicePort: '5001'
