minikube-voyager-kong-ipfs/kong-simple-ingress.yaml
apiVersion: voyager.appscode.com/v1beta1
kind: Ingress
metadata:
  name: kong-simple-ingress
spec:
  backend:
    serviceName: travis-minikube-kong-kong-proxy
    servicePort: '8443'
